# trex

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yml
src/: CMakeLists.txt
src/evtrec/: CMakeLists.txt
